implement tile placement

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       <strong class="important">Notes:</strong>
       <ul>
         <li>This site is NOT the official version of 2048. You can play the original version <a href="https://gabrielecirulli.github.io/2048/">here.</a></li>
-        <li>The tiles spawn in the optimal way to reach the highest score possible.</li>
-        <li>Theoretically, it should be easy to reach 131072. Have fun!</li>
+        <li>The tiles spawn in the optimal way to reach the highest tile possible. Think of it like playing a game of 2048 where the RNG is <b>extremely</b> in your favor.</li>
+        <li>Theoretically, it should be possible to reach 131072. Have fun!</li>
       </ul>
     </p>
     <hr>
