--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
   <div class="container">
     <div class="heading">
+      <h1 class="title">Easy Mode</h1>
       <h1 class="title">2048</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
@@ -81,7 +82,7 @@
       <ul>
         <li>This site is NOT the official version of 2048. You can play the original version <a href="https://gabrielecirulli.github.io/2048/">here.</a></li>
         <li>The tiles spawn in the optimal way to reach the highest tile possible. Think of it like playing a game of 2048 where the RNG is <b>extremely</b> in your favor.</li>
-        <li>Theoretically, it should be possible to reach 131072. Have fun!</li>
+        <li>It should be possible to reach 131072. Have fun!</li>
       </ul>
     </p>
     <hr>
