--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <link rel="apple-touch-startup-image" href="meta/apple-touch-startup-image-640x920.png"  media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)"> <!-- iPhone, retina -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
+  <meta name="description" content="2048 with optimal tile spawning. Play 2048 with extremely favorable RNG!">
+  <meta name="author" content="Angela Qian">
+  <meta name="keywords" content="2048, 2048 easy, 2048 easy mode, 2048 cheat, easy mode, easy 2048, easy mode 2048">
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
