--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Easy Mode 2048</title>
+  <title>Hard Mode 2048</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -13,7 +13,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="description" content="2048 with optimal tile spawning. Play 2048 with extremely favorable RNG!">
   <meta name="author" content="Angela Qian">
-  <meta name="keywords" content="2048, 2048 easy, 2048 easy mode, 2048 cheat, easy mode, easy 2048, easy mode 2048">
+  <meta name="keywords" content="2048, 2048 hard, 2048 hard mode, 2048 cheat, hard mode, hard 2048, hard mode 2048">
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
@@ -32,7 +32,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">Easy Mode</h1>
+      <h1 class="title">Hard Mode</h1>
       <h1 class="title">2048</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
@@ -94,8 +94,8 @@
       <strong class="important">Notes:</strong>
       <ul>
         <li>This site is NOT the official version of 2048. You can play the original version <a href="https://gabrielecirulli.github.io/2048/">here.</a></li>
-        <li>The tiles spawn in the optimal way to reach the highest tile possible. Think of it like playing a game of 2048 where the RNG is <b>extremely</b> in your favor.</li>
-        <li>It should be possible to reach 131072. Have fun!</li>
+        <li>The tiles spawn in the worst way possible. They are full of malice and evil. Think of it like playing a game of 2048 where the RNG is <b>not</b> in your favor.</li>
+        <li>If you somehow reach 2048, I would be <b>extremely</b> impressed. Please contact me and send me a screen recording, I would like to pick your brain.</li>
       </ul>
     </p>
     <hr>
